--- a/src/scss/manga-list.scss
+++ b/src/scss/manga-list.scss
@@ -7,8 +7,9 @@
 	padding-bottom:3px !important;
 }
 
-.input-field input[type=search] .material-icons{
-	top:10px;
+.input-field .material-icons.clear{
+	height:45px;
+	line-height:45px;
 }
 
 .selected-label{
