Implement TG-92 #done

--- a/src/js/components/sidebar/sidebar.template.html
+++ b/src/js/components/sidebar/sidebar.template.html
@@ -1,4 +1,4 @@
-<div class="sidebar " data-bind="listenTo:commands">
+<div class="sidebar " data-bind="listenTo:commands, context: 'sidebar'">
     <div class="sidebar-favorites-manga collection with-header ">
         <a href="javascript:void(0);" class="collection-item waves-effect waves-light" data-bind="click:showFavorites, active: isFavoritesActive">
             <i class="material-icons left">star</i>
