--- a/src/js/components/topbar/topbar.template.html
+++ b/src/js/components/topbar/topbar.template.html
@@ -1,4 +1,4 @@
-<nav>
+<nav data-bind="listenTo:commands, context: 'topbar'">
 	<div class="nav-wrapper">
 		<a href="javascript:void(0);" class="topbar-text">
 			<span>
@@ -31,7 +31,7 @@
 		</ul>
 		<ul class="right" data-bind="visibility:!!selectedManga()">
 			<li>
-				<a  data-bind="click:toggleFavorite,singlePulseEffect">
+				<a  data-bind="click:toggleFavorite, singlePulseEffect">
 					<i class="material-icons" data-bind="isFavorite:isFavorite">star_border</i>
 				</a>
 			</li>
