--- a/src/js/components/manga-list/manga-list.template.html
+++ b/src/js/components/manga-list/manga-list.template.html
@@ -30,7 +30,7 @@
 	
 	
 </section>
-<div id="mangalist" data-bind="">
+<div id="mangalist">
 	<!-- ko foreach:{data:mangas, afterRender: afterRender}  -->
 	<div class="manga">
 		<div class="manga-content">
@@ -59,6 +59,5 @@
 		<h5 class="">
 		No mangas found in this folder...
 		</h5>
-		<span> Please, select a new directory by clicking  Select directory on the left. :)</span>
 	</div>	
 </div>
