--- a/src/js/components/manga-list/manga-list.template.html
+++ b/src/js/components/manga-list/manga-list.template.html
@@ -34,7 +34,7 @@
 		
 	</section>
 	<div id="mangalist" class="col s12">
-		<!-- ko foreach:{data:mangas, afterRender: afterRender}  -->
+		<!-- ko foreach: mangas  -->
 		<div class="manga">
 			<div class="manga-content">
 				<div class="image-container">
@@ -52,16 +52,7 @@
 			
 		</div>
 		<!-- /ko -->
-		<div class="extra">
-			
+		<div class="extra">			
 		</div>
 	</div>
-<!-- 	<div id="no-manga-guide" class="row" style="display:none" data-bind="visible:showGuide">
-		<div class="col s12 grey-text center-align">
-			<i class="material-icons large">create_new_folder</i>
-			<h5 class="">
-			No mangas found in this folder...
-			</h5>
-		</div>	
-	</div> -->
 </div>
