--- a/src/js/components/sidebar/sidebar.template.html
+++ b/src/js/components/sidebar/sidebar.template.html
@@ -14,7 +14,7 @@
     <ul class="sidebar-favorites-items collection" data-bind="foreach:bookmarks">
         <li class="item collection-item truncate" data-bind="
             click:$component.selectDirectory,
-            active: $data.folderName === $parent.selectDirectoryText()">
+            active: $component.isFolderActive($data)">
             <span data-bind="text:folderName"></span>
         </li>
     </ul>
@@ -27,8 +27,8 @@
     </div>
     <ul class="sidebar-directory list collection" data-bind="scroll,foreach: directories">
         <li class="item collection-item truncate" data-bind="
-            style: { paddingLeft: paddingLeft() }, click:$parent.selectDirectory,
-            active: $data == $parent.selectedDirectory() && $component.currentPage() == 'manga-list-view'">
+            style: { paddingLeft: paddingLeft() }, click:$component.selectDirectory,
+            active: $component.isFolderActive($data)">
             <i class="material-icons left" data-bind="
             isOpenFolder:isOpen,
             click: toggleFolderOpen, clickBubble:false">
@@ -38,7 +38,7 @@
     </ul>
     <div class="collection sidebar-settings">
         <a href="javascript:void(0);" class="collection-item waves-effect waves-light"
-        data-bind="active:currentPage()=='settings-page-view', click: showSettings">
+        data-bind="active:isSettingsActive, click: showSettings">
             <i class="left material-icons">settings</i>
             <strong class="">Settings</strong>
         </a>
