--- a/src/scss/settings-page.scss
+++ b/src/scss/settings-page.scss
@@ -1,8 +1,9 @@
 .settings-label {
-	margin-right: 10px
+	margin-right: 10px;
+	width:100% !important;
 }
 .settings-input {
 	height: 100% !important;
 	display:none;
-	width:inherit !important;
+	width:100% !important;
 }
