--- a/app/renderer-process/components/manga-list/manga-list.template.html
+++ b/app/renderer-process/components/manga-list/manga-list.template.html
@@ -1,15 +1,14 @@
 <div class="row">
-	
+
 
 
 	<section class="col s12" data-bind="listenTo:commands, context:'manga-list'">
 		<!-- ko if: selectedDirectory -->
 		<h4 class="col s12 l6 truncate selected-folder">
-		<a class="bookmark-btn btn btn-floating left waves-effect waves-light"
-			data-bind="click:toggleBookmark">
+			<a class="bookmark-btn btn btn-floating left waves-effect waves-light" data-bind="click:toggleBookmark">
 			<i class="material-icons" data-bind="toggleBookmark:isBookmarked">bookmark_border</i>
 		</a>
-		<span data-bind="text:selectedDirectoryText"></span>
+			<span data-bind="text:selectedDirectoryText"></span>
 		</h4>
 		<!-- /ko -->
 		<!-- ko ifnot: selectedDirectory -->
@@ -30,15 +29,15 @@
 				<i class="material-icons clear" data-bind="click:clearSearch">close</i>
 			</div>
 		</div>
-		
-		
+
+
 	</section>
 	<div id="mangalist" class="col s12">
-		<!-- ko foreach: mangas  -->
+		<!-- ko foreach: {data: mangas, afterAdd: afterAdd}  -->
 		<div class="manga">
 			<div class="manga-content">
 				<div class="image-container">
-					<img class="manga-image" data-bind="src:thumbnail, click:$parent.viewManga" >
+					<img class="manga-image" data-bind="src:thumbnail, click:$parent.viewManga">
 				</div>
 				<div class="info">
 					<span class="title" data-bind="text:titleShort, tooltip:'top'"></span>
@@ -46,13 +45,13 @@
 					<i class="material-icons cbutton__icon action" data-bind="isFavorite:isFavorite,
 					click:$parent.toggleFavorites">star</i>
 					</button>
-					
+
 				</div>
 			</div>
-			
+
 		</div>
 		<!-- /ko -->
-		<div class="extra">			
+		<div class="extra">
 		</div>
 	</div>
 </div>
