--- a/app/renderer-process/scss/master.scss
+++ b/app/renderer-process/scss/master.scss
@@ -24,7 +24,8 @@
 	.product-logo {
 		margin-left: 8px;
 		margin-right: 8px;
-		
+		max-width:16px;
+		max-height:16px;
 	}
 	.app-title {
 		flex-grow: 1;
