--- a/app/renderer-process/scss/master.scss
+++ b/app/renderer-process/scss/master.scss
@@ -7,7 +7,7 @@
 @import "./manga-list.scss";
 @import "./topbar.scss";
 @import "./settings-page.scss";
-
+@import "./error-dialog.scss";
 
 .no-flick{transform:translate3d(0,0,0);}
 
