--- a/app/renderer-process/scss/master.scss
+++ b/app/renderer-process/scss/master.scss
@@ -8,7 +8,7 @@
 @import "./topbar.scss";
 @import "./settings-page.scss";
 @import "./error-dialog.scss";
-
+@import "./file-drag-overlay.scss";
 .no-flick{transform:translate3d(0,0,0);}
 
 #toast-container {
