Implement for TG-116 #in-progress, TG-117 #in-progress

--- a/app/renderer-process/components/dialogs/error-dialog.template.html
+++ b/app/renderer-process/components/dialogs/error-dialog.template.html
@@ -1,4 +1,4 @@
-<div id="error-modal" class="modal" data-bind="modal:shown">
+<div id="error-modal" class="modal" data-bind="modal:shown, onComplete:onComplete">
     <div class="modal-content">
         <h4 class="valign-wrapper">
             <i class="material-icons error-icon"> error</i>
