Fix for TG-120 #closed

--- a/app/renderer-process/components/dialogs/about-dialog.template.html
+++ b/app/renderer-process/components/dialogs/about-dialog.template.html
@@ -12,10 +12,10 @@
             <span> Description: </span> <span data-bind="text:description"></span>
         </p>
         <p>
-            <span> For issues, please contact me at: </span> <a data-bind="attr:{href:githubRepo}, text: githubRepo"></a>
+            <span> For issues, please contact me at: </span> <a data-bind="href:githubRepo, text: githubRepo" target="_blank"></a>
         </p>
     </div>
     <div class="modal-footer">
-        <a href="javascript:void(0);" class="modal-action modal-close waves-effect btn-flat ">Close</a>
+        <a href="javascript:void(0);" class="modal-action modal-close waves-effect btn-flat align-center">Close</a>
     </div>
 </div>
