--- a/app/renderer-process/scss/about-dialog.scss
+++ b/app/renderer-process/scss/about-dialog.scss
@@ -9,4 +9,8 @@
         margin-right:8px;        
         @extend  .small;
     }
+    .modal-footer {
+        display: flex;
+        justify-content: center;
+    }
 }
