An update on dialogs

--- a/app/renderer-process/components/dialogs/about-dialog.template.html
+++ b/app/renderer-process/components/dialogs/about-dialog.template.html
@@ -5,11 +5,9 @@
             <span class="header"> About</span>
         </h4>
         <hr>
+        <p data-bind="text:description"></p>
         <p>
             <span> Version :</span> <span data-bind="text: version"></span>
-        </p>
-        <p>
-            <span> Description: </span> <span data-bind="text:description"></span>
         </p>
         <p>
             <span> For issues, please contact me at: </span> <a data-bind="href:githubRepo, text: githubRepo" target="_blank"></a>
