--- a/app/renderer-process/components/dialogs/error-dialog.template.html
+++ b/app/renderer-process/components/dialogs/error-dialog.template.html
@@ -2,7 +2,7 @@
     <div class="modal-content">
         <h4 class="valign-wrapper">
             <i class="material-icons error-icon"> error</i>
-            <span class="header"> Something wrong happened...</span>
+            <span class="header"> Error</span>
         </h4>
         <hr>
         <p data-bind="text:errorMessage" class="error-message"></p>
