--- a/app/renderer-process/scss/master.scss
+++ b/app/renderer-process/scss/master.scss
@@ -9,6 +9,7 @@
 @import "./settings-page.scss";
 @import "./error-dialog.scss";
 @import "./about-dialog.scss";
+@import "./update-confirmation-dialog.scss";
 @import "./file-drag-overlay.scss";
 .no-flick{transform:translate3d(0,0,0);}
 
