--- a/app/renderer-process/components/sidebar/sidebar.template.html
+++ b/app/renderer-process/components/sidebar/sidebar.template.html
@@ -5,7 +5,7 @@
             <strong class=""> Favorites</strong>
         </a>
     </div>
-    <div class="sidebar-favorites collection with-header " data-bind="click:checkForUpdates">
+    <div class="sidebar-favorites collection with-header ">
         <a href="javascript:void(0);" class="collection-item waves-effect waves-light">
             <i class="material-icons left">bookmark</i>
             <strong class=""> Bookmarked Folders</strong>
