Implementation for TG-132 #in-progress

--- a/app/renderer-process/components/sidebar/sidebar.template.html
+++ b/app/renderer-process/components/sidebar/sidebar.template.html
@@ -19,7 +19,7 @@
         </li>
     </ul>
     <div class="sidebar-directory-header collection with-header">
-        <a href="javascript:void(0);" class="collection-item waves-effect waves-light" data-bind="click:openDirectory">
+        <a href="javascript:void(0);" class="collection-item waves-effect waves-light" data-bind="click:openDirectory" id="select-directory-btn">
             <i class="material-icons left">create_new_folder</i>
             <strong class="">Select directory</strong>
 
