--- a/app/renderer-process/components/manga-list/manga-list.template.html
+++ b/app/renderer-process/components/manga-list/manga-list.template.html
@@ -8,11 +8,11 @@
 			<a class="bookmark-btn btn btn-floating left waves-effect waves-light" data-bind="click:toggleBookmark">
 			<i class="material-icons" data-bind="toggleBookmark:isBookmarked">bookmark_border</i>
 		</a>
-			<span data-bind="text:selectedDirectoryText"></span>
+			<span data-bind="text:selectedDirectoryText" id="selected-directory-text"></span>
 		</h4>
 		<!-- /ko -->
 		<!-- ko ifnot: selectedDirectory -->
-		<h4 class="col s12 l6">Manga list</h4>
+		<h4 class="col s12 l6" id="selected-directory-text">Manga list</h4>
 		<!-- /ko -->
 		<div class="include-subfolders switch col s12 m6 l3">
 			<label class="right">
