add more custom commands and refactor tests

--- a/app/renderer-process/components/manga-list/manga-list.template.html
+++ b/app/renderer-process/components/manga-list/manga-list.template.html
@@ -41,7 +41,7 @@
 				</div>
 				<div class="info">
 					<span class="title" data-bind="text:titleShort, tooltip:'top'"></span>
-					<button class="cbutton cbutton--effect-boris" data-bind="singlePulseEffect:true, clickBubble:false">
+					<button class="cbutton cbutton--effect-boris toggle-as-favorite" data-bind="singlePulseEffect:true, clickBubble:false">
 					<i class="material-icons cbutton__icon action" data-bind="isFavorite:isFavorite,
 					click:$parent.toggleFavorites">star</i>
 					</button>
