Write tests for TG-133 #done

--- a/app/renderer-process/components/favorites-list/favorites-list.template.html
+++ b/app/renderer-process/components/favorites-list/favorites-list.template.html
@@ -1,7 +1,7 @@
 <div class="manga-list">
 	<section class="row">
-		<h4 class="col s12 m6 l9">
-			<span>Favorites</span>
+		<h4 id="header-text" class="col s12 m6 l9">
+			Favorites
 		</h4>
 		<div class="col s12  m6 l3">
 			<div class="input-field">
