--- a/app/renderer-process/components/favorites-list/favorites-list.template.html
+++ b/app/renderer-process/components/favorites-list/favorites-list.template.html
@@ -20,7 +20,7 @@
 				</div>
 				<div class="info">
 					<span class="title" data-bind="text:titleShort, tooltip:'top'"></span>
-					<button class="cbutton cbutton--effect-boris" data-bind="singlePulseEffect:true, click:$parent.toggleFavorites, clickBubble:false">
+					<button class="cbutton cbutton--effect-boris toggle-as-favorite" data-bind="singlePulseEffect:true, click:$parent.toggleFavorites, clickBubble:false">
 					<i class="material-icons cbutton__icon action" data-bind="isFavorite:isFavorite">star</i>
 					</button>
 				</div>
