TG-137 #in-progress, TG-135 #done, TG-136 #done

--- a/app/renderer-process/components/manga-list/manga-list.template.html
+++ b/app/renderer-process/components/manga-list/manga-list.template.html
@@ -19,7 +19,7 @@
 				Include subfolders
 				<input type="checkbox" data-bind="switch:isRecursive">
 				<span class="lever"></span>
-				<span data-bind="text:isRecursiveText"></span>
+				<span class="include-label" data-bind="text:isRecursiveText"></span>
 			</label>
 		</div>
 		<div class="col s12  m6 l3">
