Fix image fit in settings to be saved and set correctly

--- a/app/renderer-process/components/settings-page/settings-page.template.html
+++ b/app/renderer-process/components/settings-page/settings-page.template.html
@@ -8,7 +8,7 @@
 		<div class="col s12 l3">
 			<div class="switch col s12">
 				<label id="include-subfolders">
-					Include subfolders
+					Search Include subfolders
 					<input type="checkbox" data-bind="switch:isRecursive">
 					<span class="lever"></span>
 					<span id="include-label" data-bind="text:isRecursiveText"></span>
@@ -39,10 +39,10 @@
 					options:viewOptions,
 					optionsText: 'text',
 					optionsValue: 'value',
-					value: viewOption,
-					materialSelect:viewOption">
+					value: imageFit,
+					materialSelect:imageFit">
 				</select>
-				<label>Search and view options</label>
+				<label>Image fit</label>
 			</div>
 		</div>
 	</div>
