--- a/app/renderer-process/components/topbar/topbar.template.html
+++ b/app/renderer-process/components/topbar/topbar.template.html
@@ -1,4 +1,4 @@
-<nav data-bind="listenTo:commands, context: 'topbar'">
+<nav >
 	<div class="nav-wrapper">
 		<a href="javascript:void(0);" class="topbar-text">
 			<span>
